--- a/src/main_page.html
+++ b/src/main_page.html
@@ -6,6 +6,11 @@
     <title>ToDo Website</title>
 </head>
 <body>
-    <div id="content"></div>
+    <div id="mainPage">
+        <header>
+            <h1 id="title">My To Do list</h1>
+        </header>
+        <div id="content"></div>
+    </div>
 </body>
 </html>
